add new elements

--- a/views/src/header.ejs
+++ b/views/src/header.ejs
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= title %></title>
 </head>
 <body>
-    <%- include('./src/header.ejs', { title: 'Главная страница' }) %>
-    <p></p>
-    <a href="/about">Click me</a>
-    
-
     
 </body>
 </html>
