--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <%- include('./src/header.ejs', { title: 'Главная страница' }) %>
     <p></p>
     <a href="/about">Click me</a>
-    
+    <h1>Hello world</h1>
 
     
 </body>
